# llm_code_understanding

./: .gitignore  README.md
Code Examples/real/darts/renamed_filter/: blank.py  prompt.txt
Code Examples/real/statsmodels/seasonal_decompose/: blank.py  prompt.txt
Code Examples/trivial/dynamic_code/dynamic_dispatch/: prompt.txt  result.txt
Code Examples/trivial/dynamic_code/evaluation/: blank.py
Code Examples/trivial/dynamic_code/indirect_evaluation/: blank.py
Code Examples/trivial/edge_cases/closely_named_method_overrides/: blank.py  prompt.txt
language_evaluator/: pyproject.toml  requirements.txt
language_evaluator/language_evaluator/: __main__.py  data.py  evaluate.py  prompt.py
language_evaluator/language_evaluator/backend/: generic.py  openai.py  xwin.py
language_evaluator/language_evaluator/code_sample/: prompt.py  sample.py
language_evaluator/language_evaluator/config/: openai.py
language_evaluator/language_evaluator/evaluation/: parse.py  prompt.py
real/darts/renamed_filter/: prompt.txt  result.txt
real/statsmodels/seasonal_decompose/: blank.py  prompt.txt  result.txt
trivial/dynamic_code/dynamic_dispatch/: blank.py  prompt.txt
trivial/dynamic_code/evaluation/: blank.py  result.txt
trivial/dynamic_code/indirect_evaluation/: blank.py  prompt.txt
trivial/edge_cases/closely_named_method_overrides/: blank.py  result.txt
trivial/edge_cases/falsely_named/: blank.py
trivial/edge_cases/method_overrides/: prompt.txt
trivial/edge_cases/parent_methods/: blank.py  prompt.txt  result.txt
(+6 files in other folders)
