[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "language-evaluator"
version = "0.1.0"
description = ""
authors = ["Lissa Hyacinth <lissahyacinth@gmail.com>"]
readme = "README.md"
packages = [{include = "language_evaluator"}]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}