[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "language-evaluator"
version = "0.1.0"
description = ""
authors = [{ name = "Lissa Hyacinth", email = "lissahyacinth@gmail.com"}]
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
